--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- The video -->
 <video autoplay muted loop id="myVideo">
-  <source src="bg.webm" type="video/webm">
+  <source src="bg.mp4" type="video/mp4">
 </video>
 
 <!-- Optional: some overlay text to describe the video -->
