--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@ body {
   width: 100%;
   padding: 20px;
 }
+
+h1 {
+    width: 100%;
+    position: absolute;
+    top: 45%;
+    transform: translateY(-50%);
+    font-family:Arial, sans-serif;
+    font-weight: lighter;
+    font-size: 5vw;
+    text-align: center;
+    color: white;
+}
 </style>
 </head>
 <body>
@@ -37,6 +49,9 @@ body {
   <source src="bg.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
+
+<h1>MYung</h1>
+</script>
 
 </body>
 </html>
