--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>MYung</title>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -37,7 +38,7 @@ h1 {
     transform: translateY(-50%);
     font-family:Arial, sans-serif;
     font-weight: lighter;
-    font-size: 5vw;
+    font-size: 4vw;
     text-align: center;
     color: white;
 }
@@ -50,7 +51,7 @@ h1 {
   Your browser does not support HTML5 video.
 </video>
 
-<h1>MYung</h1>
+<h1>Marty</br>@</br>MYung</h1>
 </script>
 
 </body>
