--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Marty's Hub</title>
+<body bgcolor="black">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -14,7 +15,7 @@ body {
   font-size: 17px;
 }
 
-#myVideo {
+#bgVideo {
   position: fixed;
   right: 0;
   bottom: 0;
@@ -46,7 +47,7 @@ h1 {
 </head>
 <body>
 
-<video autoplay muted loop id="myVideo">
+<video autoplay muted loop id="bgVideo">
   <source src="bg.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
