--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Marty's Hub</title>
+<title>Ｍ Ｙ Ｕ Ｎ Ｇ</title>
 <body bgcolor="black">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
