--- a/index.html
+++ b/index.html
@@ -1,59 +1,14 @@
-<!DOCTYPE html>
-<html>
-<title>Ｍ Ｙ Ｕ Ｎ Ｇ</title>
-<body bgcolor="black">
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
+---
+bg: "rails.jpg"
+layout: default
+crawlertitle: "Jekyll blog"
+title: "Voyager"
+summary: "main page"
+---
 
-body {
-  margin: 0;
-  font-family: Arial;
-  font-size: 17px;
-}
-
-#bgVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-}
-
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
-}
-
-h1 {
-    width: 100%;
-    position: absolute;
-    top: 45%;
-    transform: translateY(-50%);
-    font-family:Arial, sans-serif;
-    font-weight: lighter;
-    font-size: 4vw;
-    text-align: center;
-    color: white;
-}
-</style>
-</head>
-<body>
-
-<video autoplay muted loop id="bgVideo">
-  <source src="bg.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
-
-<h1>Marty</br>@</br>MYung</h1>
-</script>
-
-</body>
-</html>
+{% for post in site.posts limit: 5 %}
+  <article class="index-page">
+    <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+    {{ post.excerpt }}
+  </article>
+{% endfor %}
