--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
-bg: "rails.jpg"
+bg: hk.jpg
 layout: default
-crawlertitle: "Jekyll blog"
-title: "Voyager"
-summary: "main page"
+crawlertitle: Home | MYung
+title: Voyager
+summary: Home
+published: true
 ---
 
 {% for post in site.posts limit: 5 %}
