--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ crawlertitle: Home | MYung
 title: Voyager
 summary: Home
 published: true
+active: MYung
 ---
 
 {% for post in site.posts limit: 5 %}
