--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ h1 {
   Your browser does not support HTML5 video.
 </video>
 
-<h1>Marty</br>@</br>MYung</br>.</br>ca</h1>
+<h1>Marty</br>@</br>MYung</h1>
 </script>
 
 </body>
